--- a/src/pages/opensource/Opensource.css
+++ b/src/pages/opensource/Opensource.css
@@ -94,3 +94,18 @@
     margin-bottom: 20px;
   }
 }
+.read-more-btn {
+  background-color: rgba(76, 37, 117, 0.81);
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  cursor: pointer;
+  font-size: 14px;
+  margin-top: 8px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.read-more-btn:hover {
+  background-color: rgba(149, 129, 170, 0.81);
+}
